[MOSYNC-2819] Work in progress on updating camera code to work with devices with front faceing camera, but no back facing camera.